--- a/docs/extensions.adoc
+++ b/docs/extensions.adoc
@@ -464,7 +464,7 @@ def ignoreMyExceptions
 
 === TempDir
 
-Generate temp directory for test, and clean them after test.
+Generate a temp directory for test, and delete it after test.
 
 `TempDir` can be applied to annotate a member field of type `java.io.File` or `java.nio.file.Path`
 in a spec class. If the annotated field is shared, the temp directory will be shared in this spec, otherwise every
@@ -473,12 +473,12 @@ feature will have its own temp directory:
 [source,groovy]
 ----
 class TempDirSpec {
-  // all feature will share the same temp directory `path1`
+  // all feature will share the same temp directory path1
   @TempDir
   @Shared
   Path path1
 
-  // every feature have its own `path2`
+  // every feature have its own path2
   @TempDir
   Path path2
 }
