--- a/docs/extensions.adoc
+++ b/docs/extensions.adoc
@@ -145,8 +145,8 @@ include::{sourcedir}/extension/RequiresDocSpec.groovy[tag=example-a]
 `Requires` works exactly like `IgnoreIf`, except that the predicate is inverted. In general, it is preferable
 to state the conditions under which a method gets executed, rather than the conditions under which it gets ignored.
 
-If multiple `@Requires` annotations are present, the annotated element is skipped if either of the
-conditions evaluates to `false`:
+If multiple `@Requires` annotations are present, they are effectively combined with a logical "and".
+The annotated element is skipped if any of the conditions evaluates to `false`:
 
 [source,groovy,indent=0]
 ----
