adoc with executable code

--- a/docs/extensions.adoc
+++ b/docs/extensions.adoc
@@ -468,20 +468,20 @@ Generate a temp directory for test, and delete it after test.
 
 `TempDir` can be applied to annotate a member field of type `java.io.File` or `java.nio.file.Path`
 in a spec class. If the annotated field is shared, the temp directory will be shared in this spec, otherwise every
-feature will have its own temp directory:
+iteration will have its own temp directory:
 
 [source,groovy]
 ----
-class TempDirSpec {
-  // all feature will share the same temp directory path1
-  @TempDir
-  @Shared
-  Path path1
+include::{sourcedir}/extension/TempDirDocSpec.groovy[tag=example-common]
+include::{sourcedir}/extension/TempDirDocSpec.groovy[tag=example-a]
+----
 
-  // every feature have its own path2
-  @TempDir
-  Path path2
-}
+Other optional parameters:
+
+[source,groovy]
+----
+include::{sourcedir}/extension/TempDirDocSpec.groovy[tag=example-common]
+include::{sourcedir}/extension/TempDirDocSpec.groovy[tag=example-b]
 ----
 
 === Title and Narrative
