--- a/docs/extensions.adoc
+++ b/docs/extensions.adoc
@@ -464,7 +464,7 @@ def ignoreMyExceptions
 
 === TempDir
 
-To generate a temp directory for test, and delete it after test,
+To generate a temp directory for test and delete it after test,
 annotate a member field of type `java.io.File`, `java.nio.file.Path`
 or untyped using `def`in a spec class. If the annotated field is shared,
 the temp directory will be shared in this spec, otherwise every
