Add FAQ to documentation
For now, there are two FAQ items explaining optional dependencies in general and
explaining why there are two class mocking variants ByteBuddy vs. CGLIB.

Closes #1165.

--- a/docs/all_in_one.adoc
+++ b/docs/all_in_one.adoc
@@ -23,4 +23,6 @@ include::release_notes.adoc[leveloffset=+1]
 
 include::migration_guide.adoc[leveloffset=+1]
 
+include::faq.adoc[leveloffset=+1]
+
 include::known_issues.adoc[leveloffset=+1]
