--- a/docs/extensions.adoc
+++ b/docs/extensions.adoc
@@ -447,10 +447,9 @@ def ignoreMyExceptions
 
 === TempDir
 
-In order to generate a temporary directory for test and delete it after test,
-annotate a member field of type `java.io.File`, `java.nio.file.Path`
-or untyped using `def` in a spec class (`def` will inject a `Path`). If the annotated field is `@Shared`,
-the temporary directory will be shared in the corresponding specification, otherwise every
+In order to generate a temporary directory for test and delete it after test, annotate a member field of type
+`java.io.File`, `java.nio.file.Path` or untyped using `def` in a spec class (`def` will inject a `Path`). If the
+annotated field is `@Shared`, the temporary directory will be shared in the corresponding specification, otherwise every
 feature method and every iteration per parametrized feature method will have their own temporary directories:
 
 [source,groovy,indent=0]
@@ -458,11 +457,10 @@ feature method and every iteration per parametrized feature method will have the
 include::{sourcedir}/extension/TempDirDocSpec.groovy[tag=example]
 ----
 
-If you want to customize the parent directory for temporary directories,
-you can use the <<Spock Configuration File>>.
+If you want to customize the parent directory for temporary directories, you can use the <<Spock Configuration File>>.
 
-If `keep` is set to `true`, Spock will not delete temporary directories after tests.
-The default value is taken from system property `spock.tempDir.keep` or `false`, if undefined.
+If `keep` is set to `true`, Spock will not delete temporary directories after tests. The default value is taken from
+system property `spock.tempDir.keep` or `false`, if undefined.
 
 .Temporary Directory Configuration
 [source,groovy]
